--- a/UcasProjectManagement/UcasProWindowsForm/Forms/ExpensesForm/FrmManageExpenses.resx
+++ b/UcasProjectManagement/UcasProWindowsForm/Forms/ExpensesForm/FrmManageExpenses.resx
@@ -127,64 +127,64 @@
     <value>227, 56</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="gridViewCommandColumn1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="gridViewCommandColumn3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAUHSURBVEhLvZVtbFNVGMcrnwl+08SQmKhfFE384BdIJiEz
-        Q0RUlBFgIonxBf0iCUaFYFEJmBiiyxjIRoAAg22s27puo0iga+k2uq3r2/q6bnNr6cvtvV27t/b25fTv
-        c+86KxZNNNEn+eXc3HvO/3/O89xzjuJ/jUKhsJ8x1ltE8w/QEt0AqotS5UHiVZlMJkKd/nXkcjk/NU8V
-        JUuRLxQO0MepfGG5IysUQO8IIM8k6PnvoL7SUKk/reRkUbYUImMNK+Lq8TiqOz14r9uHmi4fdnZ4sV3l
-        xrY2N1677irj1VYXKq7YofIK8vg0Y61F2VKIOVZvcThpLoA3nkYHmWj8s+giOn1xtBNtnjiue4QyWomr
-        Th4eIQ1aCNJZdrUoW4oUGZhtTpajdLj4FIkJ6CgKyyJuAS0uHlcfQhNx0RGTx0lZWMqypqJsKeYyrH6Y
-        DKQldtLspfR8rJ3ABzcmsK97HDWacexS+7CD0vVn3m73YjOlqd23nKLF9MMMRFY/MDrGkiJDLJXHZDKD
-        KUJqJxKijF9itpxxqU1kMJsugKexpHG+KFuKeIrVG8mA9GnZMbxFRd2l9qKaZig9b6Vibm51ovJaORub
-        xlDV4kFvSIQ9CWimme4osKoovRwxMugbcbDoEqNZZ2GOpGRGiZHIEoaJIYnwg5gIRzyH07dtONzQCnca
-        UAWBC5OsoSi9HKHFXH3fsIMJtEztZBJHjQEcHwjiGKE0BnHEEMAh/Qy+0E0/wHd3A2i0cqgxBKHYq8TB
-        2nMIUx10CeCMbf7KyUG+pmQw5GDcUgG9k3P4lkSPD4Zkg2/o+WsSOqwP4CsykThkmIGS2E3pe7LJjTW/
-        JLBKI0Dx/gkoT18ALQJdTmf+sit1UzaYmSMDk51NzuXg4EXoA4vQBxdgCC6ib2ZBRkfcmZ7HbWKQvplD
-        C/h0iMcaTRiPqu/jGV0Sq7WzUOxR4khdI0xCQWmIFzbIBlMJMhiws9ACwzkbFbndjZ1U5HeoyG/QDt5C
-        v2FVixOvXHNg4zUPXrjowTqVH6u7QnisJ4KXdAKevhHGqh5aReMYnt998EtZeCUmEpn6PqOVuYUsHLEM
-        TKEU7sksYVDi/jIj0QyGpnns1I5B0cbhCW0UlQMJvHiHh4Kqu0Y1g8/0M91F2VJ44pKBjU0kGc7beeyh
-        M2hf9wT2avzY1emTV/KmyotNqgB+7OyArb8OlYNxrDflUGGktLQF8EjzJE6YOYgiu1SULYVLMjBY2Rif
-        hXZqHj9bY2i08Thr5XHGEkP9KIdTFgHK/iiarijpwDqFOG/FPvsCFO0CHu+cRh1NLJjI0qbLlu9kh0AG
-        eguzUnp6JudlQUn4tIVDnTmK2uEITrlSONJswIfVmxAz/QCEWmAxX6K/yIh1TeO45U/CN5uHjUuXH3YW
-        TmwY5TIY4/MkGpN38G71OKqp0NvprHmdirztZgzPvfs51q59Fju2vgxb80fw63/CsR49Njb7UWuOwSnk
-        YIumy49rtyAeMHPilDGYxnA4AzMVUyqo3EZEeJYAvTeMDesrUFG5BZ8oa6E22WGM5nGXdpadJjdM/Qw0
-        3s6lyy8cKdxCuqr/fjpiCouy8B+RDNQDDnx/9jJueTm46Egw0W69Fy1glMvCQgb3aNxQeNHvS6bLr8yV
-        cPDZ/UORVK+EKZzSrDDCZTU6P6exCCnNr3TJuxaYZiSa/f27KSJqh0OpbvpZ/vrS/29CofgNt1/AiPHp
-        KXsAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAUCSURBVEhLvZVtbFNVGMcrnwl+08SQmKhfFE384BdIJiEz
+        Q0RUlBFgIonxBf0iCUaFYFEJmBiiyxjIRoAAg22se+s2igS6dq9t13Vdt76t69xW+nJ7b9furff25fTv
+        c+86KxZNNNEn+eXc3HvO/3/O89xzjup/jVwud5Ax1pVH+w/QER0AyvNSxUHiZalUKkyd/nVkMhkfNU/l
+        JQuRzeUO0cepbG6lI8vlQO8IIMtk6PnvoL7yULk/reR0XrYQEmM1q+JtEzGUt7rxXocXFe1e7G7xYKfG
+        hR1NLrx201nEq41OlFwbhcYjKONFxhrzsoWQMqx6wGKluQCemIgWMtH65tBOtHpjaCaa3DHcdAtFNBLX
+        x3m4BRG0EIhpdj0vW4gkGfSZrCxD6XDySRIT0JIXVkRcAhqcPK4/hDrisiOqjJOzsJxmdXnZQsynWHUP
+        GchLbKXZy+n5WDeJD25N4kDHBCq0E9jT5sUuStefebvZg62UpmbvSoqWxIcZSKy6u3+IJSSGaDILfyKF
+        KUJuJ+OSgk9mrpgJuY2nMCfmwNNY0riYly1ELLliQPq07CjeoqLuafOgnGYoP2+nYm5tHEfpjWI2142h
+        rMGNrqCE0QSgnWb648CavPRKRGWDXguLLDOadRrWcFJhmBgKL8NCmGVCD2IiHLEMzt6142hNI1wioAkA
+        l/ysJi+9EsGlTHV3j4UJtEydP4HjvbM42R/ACULdG8Ax4yyOGGbwhX76Ab7rmUXtCIcKYwCq/WocrryA
+        ENVBHwfO2ReunR7gKwoGRgvjlnPo8s/jWxI9ORBUDL6h569J6KhhFl+RicwR4wzUxF5K35N1Lqz7JY41
+        WgGq909BffYSaBFoHx/PXnUmbysGM/NkYDAz/3wGDl6CYXYJhsAijIEldM8sKuiJe9MLuEsM0DdrcBGf
+        mnms04bwaNt9PKNPYK1uDqp9ahyrqoVJyKmNsdwmxWAqTgbdZhZcZLhgpyI3u7CbivwOFfkN2sHb6Dcs
+        axjHKzcc2HzDjRcuu7FB48Pa9iAe6wzjJb2Ap2+FsKaTVlE7huf3Hv5SEV6NyXiKDAaZS0jDEU3BFExi
+        UGEZAzL3VxiKpGCe5rFbNwZVE4cndBGU9sfx4j0eKqruOs0MPjPMdORlC+GOyQYmNplguDjKYx+dQQc6
+        JrFf68OeVq+ykjc1HmzRzOLH1hbY+6pQOhDDRlMGJb2UlqZZPFLvxykrB0liV/KyhXAqBoNsjE9DN7WA
+        n0eiqLXzOD/C45wtiuphDmdsAtR9EdRdU9OBdQYxfgQHRhehahbweOs0qmhigXiaNl26eCc7BNlggI1Q
+        ejr9C4qgLHzWxqHKGkGlJYwzziSO1RvxYfkWRE0/AMEG2KxX6C/qxYa6CdzxJeCdy8LOicWHnY2Taoa5
+        FMb4LIlGlR28t20C5VTonXTWvE5F3nE7iufe/Rzr1z+LXdtfhr3+I/gMP+FEpwGb632otEYxLmRgj4jF
+        x7VLkA5ZOWmqNyDCEkrBSsWUC6q0YQnuZcDgCWHTxhKUlG7DJ+pKtJlG0RvJood21ihNzkL9jDR+lBOL
+        Lxw5XIJY1ndfDJtCkiL8R2SDtn4Hvj9/FXc8HJx0JJhotw5Gchjm0rCRwSCNM4eWfN6EWHxlroaDTx80
+        h5NdMqZQUrvKEJfW6n2c1iYktb/SJe9cZNqhSPr376awpLMEkx30s/z1pf/fhEr1G/4Av512QhZIAAAA
+        AElFTkSuQmCC
 </value>
   </data>
-  <data name="gridViewCommandColumn2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="gridViewCommandColumn4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAYXSURBVEhLjVZ7TFN3GGU6ZfhEfMXH1Ck+ksU9zEzUGRET
-        39ON4RYVM50654upMdkw6nwrcVOW+MoA33Cp4gsotFJAS0ELhdIWSktbSlsqIC+xgjLRnZ1b+WNMNPuS
-        L7m9t79zvu9837mtT2exY8eOCcp7uVCp1a3p6ekeOTNFLvcI0hSPIAieeOaZmOi28+fPt0ml0hntx/5f
-        REZGTo+Ojo63VrrgaKiD2eWCwWZFfnExlJo8yJV3cVOWhpPnYpF+Jwv5hYXYEB4+p/34W+OdiIiI/gqF
-        Qp2SmYG8Ii1MTgeKCa41m6A26KHS5CNdlQ0pn5+Nj0NaRgbE0PLZrl27lrTjvDkSJJKqpNtyxF1LhLqo
-        iNU7obOYUWAsYQcG5BYWIDM3BxkkuXLrJmRZmV6Cp23Pkc+CSLK8Harz+DM2NlWSdAvxiYneDszswFhu
-        g8lezrSj2GqBlmQieZJcBkW20kvQxmzF39DodNizf//qdrjX4/eoqA1ShQIXBMGrrcVRAYPJBC311xmN
-        zBJoDDpo9Hpk5eTg7r17aHnRhkdPW9D07CkeNjYiS6XCnn37trZDdgy2OPFmqhSXr15BXl4eLKzYQGm0
-        rFin10FnMEDHz7oSkbCEW3YfqYp0iGeuJSchgdKeF+IRnZDwODw83LcdtmNclEjKE27cQP79+zCXlKCU
-        AzSxAxNBTQQ1m80wW8pgZGdF4lzy1MjMUSE1Q4Hr0hQk3LwBIUnwvJHgZGys5Cq/VEAJyrRa6CiDJjsb
-        BfSFllukE1NbCAO7KaJUGn4nNz8PWbm5JMrxrrGQlvpmgr2RkSslt28jjxWZeKBYqUQxdS3UaFBMmWyU
-        zcxhWkylsFqtKLPZUFJmbh++FjncNBmN2SlB9ew58m2Tp6gl2cpmPas2ymQoYuawuubkFBR8two3zsbC
-        WV2NUi6BiYM3WywopWQGekVH0iKSie5/jaBk/oLbrhVrcGHMuJcrgoJemlmxTSZHLrfKcvw4ni9dDlf4
-        dkRPmgxp3GXYubpGdmTmLMpoRhPX2VxRAau7Eunq+x0JlEHBuywLQlC9cTs8WyJwbNAQbAmeCT2dWkbw
-        qpmzUL71F9RdTkTNup+QNHcB9dfBTW+4COqueoCq+jo4aqrhbmyAurCwI8Gl3gHbyr9aCkfIMrhWb4Rn
-        03as9w/AykmfomLhIljWboL9wFG4t0XgMYs4NWcBrl+RwCFuVKnRu842mvJBXR0e/dWKQhLMmzevo0RH
-        /Ptvss77EtaFobAvXQXr8u9xYuQYGEKXwbp5O+yrfkRVaBiOzQjG0aORsHIGztJSOCiPiy9GN6uvftSI
-        Frq6UwIxdnfzXVc2NRjGWfNhpGQuAuoWf4PiRaFwkzhq2gwc/HU3ymlCF9eznD5wcosqqbu7psZL0CoS
-        WCydE4ixY+SoOOWkKdB89jnUU4OQP42zmBaMn8dOwKG9e1HB7SrPugMz/WGjDyq4RU6nEy7O4WFTE56/
-        jcCxefPCnRM/wvVBw3F3RCAUI8cik5nNXN+7DyLDwtBIg9XQB25mDTenlsANDfV49MSDhuZmvBAJrNbX
-        CUxhYUv0XyxG+vDRSB04HMkDh0HRMwDJ/QYjmYSqIaNwrHdfnFq9GhWs3MH3k52vECdJKitfSVTf/ITw
-        JLD9hyAzJORj1ey5kA0ZgVsETCO4vIc/okaPw7VeAZD5D4J08HBk8f5Bny44t3MnajnUSsrzgPJUifqz
-        i4YWccQiga0jgX7a9N9yCS7tOxAqApWR5NjETxB15jSur/kBch8fqPoOQMbg93Gvix8uBY6DngZ7XF+P
-        +tpaND5u4iv7KRpbn3VOENLNd20NpXlIgHpWe2BUYE4a7Y76Bjxn27pDR+AeMBQu/4Go6dkPqaHforql
-        2QvWWXDonsDAwI4zmN2j1xp8MB77uvtd8PHzGxZz+nSlJCamUoiNsR8XBPuBoDnOpq7v4Y8JEx5uOHzY
-        dvHSpQohPt4eJ8Tb+S/Dm0KiYL+lUNSeOHXKRMghr5D5Y8/sJl586Of3tZ+Pz1Be9mD2Ee8xujLF64Dx
-        3buH+vr6BvK6J7M7Uwzx/L9TDPEMMXze/QcZ5A7Kf+PrCwAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAYYSURBVEhLjVZ7TFN3GGU6ZfiYiK/4mDrFR7K4h5mJOiNi
+        4gunG8MtKst06pwvpsZkw6jzrcRNWeIrA3zDpYovoNBKAS0FLRRKWygtbSltqYC8xArKRHd2buWPMdHs
+        S77k9t7+zvm+833ntj5dxfbt2ycq7+ZBpVa3ZWRkeOTMVLncI0hTPYIgeBKYp2Nj2s+dO9culUpndhz7
+        fxEVFTUjJiYmwVrlgqOxHmaXCwabFQUlJVBq8iFX3sENWTpOnI1Dxu1sFBQVYX1ExNyO42+MtyIjIwco
+        FAp1alYm8ou1MDkdKCG41myC2qCHSlOADFUOpHx+JiEe6ZmZEEPLZzt37lzSgfP6SJRIqpNvyRF/NQnq
+        4mJW74TOYkahsZQdGJBXVIisvFxkkuTyzRuQZWd5CZ60P0MBCyLJ8g6oruPPuLg0SfJNJCQleTswswNj
+        hQ0mewXTjhKrBVqSieTJchkUOUovQTuzDX9Do9Nh9759qzrgXo3fo6PXSxUKnBcEr7YWRyUMJhO01F9n
+        NDJLoTHooNHrkZ2bizt376L1eTsePmlF89MneNDUhGyVCrv37t3SAdk52OKkG2lSXLpyGfn5+bCwYgOl
+        0bJinV4HncEAHT/rSkXCUm7ZPaQpMiCeuZqSjERKe05IQExi4qOIiAjfDtjOcUEiqUi8fh0F9+7BXFqK
+        Mg7QxA5MBDUR1Gw2w2wph5GdFYtzyVcjK1eFtEwFrklTkXjjOoRkwfNaghNxcZIr/FIhJSjXaqGjDJqc
+        HBTSF1pukU5MbREM7KaYUmn4nbyCfGTn5ZEo17vGQnra6wn2REWtkNy6hXxWZOKBEqUSJdS1SKNBCWWy
+        UTYzh2kxlcFqtaLcZkNpublj+FrkctNkNGaXBDVz5sq3TpmqluQoW/Ss2iiToZiZy+paUlJR+N1KXD8T
+        B2dNDcq4BCYO3myxoIySGegVHUmLSSa6/xWC0gUht1zfrsb5seNfLAkKemFmxTaZHHncKsuxY3i2dDlc
+        EdsQM3kKpPGXYOfqGtmRmbMopxlNXGdzZSWs7ipkqO91JlAGBe+0hISiZsM2eDZH4ujgodgcPAt6OrWc
+        4NWzZqNiyy+ov5SE2rU/IXleCPXXwU1vuAjqrr6P6oZ6OGpr4G5qhLqoqDPBxb4BWyu+XApH6DK4Vm2A
+        Z+M2rPMPwIrJn6By4SJY1myEff8RuLdG4hGLODk3BNcuS+AQN6rM6F1nG015v74eD/9qQxEJ5s+f31mi
+        w/4DNlrnfwHrwjDYl66Edfn3OD5qLAxhy2DdtA32lT+iOiwcR2cG48iRKFg5A2dZGRyUx8UXo5vV1zxs
+        Qitd3SWBGLt6+K4tnxYM4+wFMFIyFwF1i79GyaIwuEkcPX0mDvy6CxU0oYvrWUEfOLlFVdTdXVvrJWgT
+        CSyWrgnE2D5qdLxy8lRoPv0M6mlBKJjOWUwPxs/jJuLgnj2o5HZVZN+Gmf6w0QeV3CKn0wkX5/CguRnP
+        3kTg2LRp4Y5JH+La4BG4MzIQilHjkMXMYa7r+y6iwsPRRIPV0gduZi03p47AjY0NePjYg8aWFjwXCazW
+        VwlM4eFL9J8vRsaIMUgbNAIpg4ZD0TsAKf2HIIWEqqGjcbRvP5xctQqVrNzB95OdrxAnSaqqXkrU0PKY
+        8CSw/YcgKzT0I9WceZANHYmbBEwnuLyXP6LHjMfVPgGQ+Q+GdMgIZPP+AZ9uOLtjB+o41CrKc5/yVIv6
+        s4vGVnHEIoGtM4F++ozf8ggu7TcIKgKVk+TopI8RffoUrq3+AXIfH6j6DUTmkPdwt5sfLgaOh54Ge9TQ
+        gIa6OjQ9auYr+wma2p52TRDaw3dNLaV5QIAGVrt/dGBuOu2OhkY8Y9u6g4fhHjgMLv9BqO3dH2lh36Cm
+        tcUL1lVw6J7AwMDOM5jTq89qvD8Be3v6nffx8xsee+pUlSQ2tkqIi7UfEwT7/qC5zubu7+CPiRMfrD90
+        yHbh4sVKISHBHi8k2Pkvw5tCkmC/qVDUHT950kTIoS+R+WPP7CFefODn95Wfj88wXvZiviveY3RnitcB
+        E3r2DPP19Q3kdW9mT6YY4vl/pxjiGWL4vP0P8xUOwiqLseMAAAAASUVORK5CYII=
 </value>
   </data>
 </root>
