--- a/UcasProjectManagement/UcasProWindowsForm/Forms/AmountRecivedForms/FrmMangeAmount.resx
+++ b/UcasProjectManagement/UcasProWindowsForm/Forms/AmountRecivedForms/FrmMangeAmount.resx
@@ -120,62 +120,62 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="gridViewCommandColumn1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAABQdJREFUSEu9lW1sU1UYxyufCX7TxJCYqF8UTfzgF0gmITNDRFSUEWAiifEF/SIJ
-        RoVgUQmYGKLLGMhGgACDbazbum6jSKBr6Ta6revb+rpuc2vpy+29Xbu39vbl9O9z7zorFk000Sf55dzc
-        e87/f87z3HOO4n+NQqGwnzHWW0TzD9AS3QCqi1LlQeJVmUwmQp3+deRyOT81TxUlS5EvFA7Qx6l8Ybkj
-        KxRA7wggzyTo+e+gvtJQqT+t5GRRthQiYw0r4urxOKo7PXiv24eaLh92dnixXeXGtjY3XrvuKuPVVhcq
-        rtih8gry+DRjrUXZUog5Vm9xOGkugDeeRgeZaPyz6CI6fXG0E22eOK57hDJaiatOHh4hDVoI0ll2tShb
-        ihQZmG1OlqN0uPgUiQnoKArLIm4BLS4eVx9CE3HREZPHSVlYyrKmomwp5jKsfpgMpCV20uyl9HysncAH
-        Nyawr3scNZpx7FL7sIPS9WfebvdiM6Wp3becosX0wwxEVj8wOsaSIkMslcdkMoMpQmonEqKMX2K2nHGp
-        TWQwmy6Ap7Gkcb4oW4p4itUbyYD0adkxvEVF3aX2oppmKD1vpWJubnWi8lo5G5vGUNXiQW9IhD0JaKaZ
-        7iiwqii9HDEy6BtxsOgSo1lnYY6kZEaJkcgShokhifCDmAhHPIfTt2043NAKdxpQBYELk6yhKL0cocVc
-        fd+wgwm0TO1kEkeNARwfCOIYoTQGccQQwCH9DL7QTT/Ad3cDaLRyqDEEodirxMHacwhTHXQJ4Ixt/srJ
-        Qb6mZDDkYNxSAb2Tc/iWRI8PhmSDb+j5axI6rA/gKzKROGSYgZLYTel7ssmNNb8ksEojQPH+CShPXwAt
-        Al1OZ/6yK3VTNpiZIwOTnU3O5eDgRegDi9AHF2AILqJvZkFGR9yZnsdtYpC+mUML+HSIxxpNGI+q7+MZ
-        XRKrtbNQ7FHiSF0jTEJBaYgXNsgGUwkyGLCz0ALDORsVud2NnVTkd6jIb9AO3kK/YVWLE69cc2DjNQ9e
-        uOjBOpUfq7tCeKwngpd0Ap6+EcaqHlpF4xie333wS1l4JSYSmfo+o5W5hSwcsQxMoRTuySxhUOL+MiPR
-        DIameezUjkHRxuEJbRSVAwm8eIeHgqq7RjWDz/Qz3UXZUnjikoGNTSQZztt57KEzaF/3BPZq/NjV6ZNX
-        8qbKi02qAH7s7ICtvw6Vg3GsN+VQYaS0tAXwSPMkTpg5iCK7VJQthUsyMFjZGJ+FdmoeP1tjaLTxOGvl
-        ccYSQ/0oh1MWAcr+KJquKOnAOoU4b8U++wIU7QIe75xGHU0smMjSpsuW72SHQAZ6C7NSenom52VBSfi0
-        hUOdOYra4QhOuVI40mzAh9WbEDP9AIRaYDFfor/IiHVN47jlT8I3m4eNS5cfdhZObBjlMhjj8yQak3fw
-        bvU4qqnQ2+mseZ2KvO1mDM+9+znWrn0WO7a+DFvzR/Drf8KxHj02NvtRa47BKeRgi6bLj2u3IB4wc+KU
-        MZjGcDgDMxVTKqjcRkR4lgC9N4wN6ytQUbkFnyhroTbZYYzmcZd2lp0mN0z9DDTezqXLLxwp3EK6qv9+
-        OmIKi7LwH5EM1AMOfH/2Mm55ObjoSDDRbr0XLWCUy8JCBvdo3FB40e9LpsuvzJVw8Nn9Q5FUr4QpnNKs
-        MMJlNTo/p7EIKc2vdMm7FphmJJr9/bspImqHQ6lu+ln++tL/b0Kh+A23X8CI8ekpewAAAABJRU5ErkJg
-        gg==
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAUGSURBVEhLvZVtbFNVGMcrnwl+08SQmKhfFE384BdIJiEz
+        Q0RUlBFgIonxBf0iCUaFzKISMDFEl1GQjQABBttY99ZtFAl0LXvrtq7ruvVtXefW0pfbe7t2b723L6d/
+        n3vXWbFoook+yS/n5t5z/v9znueec1T/a+RyuYOMsa48un+AnugAUJ6XKg4SL0ulUmHq9K8jk8l4qXkq
+        L1mIbC53iD5OZ3MrHVkuB3pHAFkmQ89/B/WVh8r9aSWn8rKFkBirWRVvm4yhvNWF9zo8qGj3YHeLGzu1
+        TuxocuK1G44iXm10oOTqGLRuQRkvMtaYly2ElGGaIauN5gK4YyJayETnnUM70eqJoZlocsVwwyUU0Uhc
+        m+DhEkTQQiCm2bW8bCGSZGC22FiG0uHgkyQmoCUvrIg4BTQ4eFx7CHXEJXtUGSdnYTnN6vKyhZhPMU0/
+        GchLbKXZy+n5WD+FD25O4UDHJCp0k9jT5sEuStefebvZja2UpmbPSoqWxIcZSExjGhxlCYkhmszCl0hh
+        mpDbqbik4JWZK2ZSbuMpzIk58DSWNC7kZQsRSzJNNxmQPi07ireoqHva3CinGcrP26mYWxsnUHq9mM11
+        4yhrcKErKGEsAehmmOEYsCYvvRJR2WDAyiLLjGadhiWcVBghhsPLGCIGZUIPYibssQzO3LHhaE0jnCKg
+        DQAXfawmL70SwaWMprvfygRapt6XwLEeP070BXCcUPcEUGny44hxFl8YZh7gu3t+1I5yqDAFoNqvxuGq
+        8whRHQxx4Kxt4eqpfr6iYNBnZdxyDl2+eXxLoif6g4rBN/T8NQkdNfrxFZnIHDHNQk3spfQ9WefEul/i
+        WKMToHr/JNRnLoIWgfaJiewVR/KWYjA7Twa9I8w3n4Gdl2D0L8EYWIQpsITu2UUFA3F3ZgF3iH76Zgku
+        4tNBHut0ITzadh/PGBJYq5+Dap8aldW1MAs5tSmW26QYTMfJwDTCgosM521U5GYndlOR36Eiv0E7eBv9
+        hmUNE3jluh2br7vwwiUXNmi9WNsexGOdYbxkEPD0zRDWdNIqasfx/N7DXyrCqzEVT2m6u4eZU0jDHk3B
+        HExiQGEZ/TL3VxiOpDA4w2O3fhyqJg5P6CMo7Yvjxbs8VFTdddpZfGac7cjLFsIVkw0sbCrBcGGMxz46
+        gw50TGG/zos9rR5lJW9q3dii9ePH1hbYeqtR2h/DRnMGJT2UliY/Hqn34aSFgySxy3nZQjgUg2E2zqeh
+        n17Az6NR1Np4nBvlcdYahWaEw2mrAHVvBHVX1XRgnUaMH8WBsUWomgU83jqDappYIJ6mTZcu3sl2QTYY
+        YqOUnk7fgiIoC5+xcqi2RFA1FMZpRxKV9SZ8WL4FUfMPQLABVstl+ot6sKFuEre9CXjmsrBxYvFhZ+Wk
+        mhEuhXE+S6JRZQfvbZtEORV6J501r1ORd9yK4rl3P8f69c9i1/aXYav/CF7jTzjeacTmei+qLFFMCBnY
+        ImLxce0UpEMWTpruCYgYCqVgoWLKBVXasATXMmB0h7BpYwlKSrfhE3UV2sxj6IlkcY921hhNboj6mWj8
+        GCcWXzhyOAWxrPe+GDaHJEX4j8gGbX12fH/uCm67OTjoSDDTbh2I5DDCpWElgwEaNxha8noSYvGVuRp2
+        Pn1wMJzskjGHkrpVhrm0zuDldFYhqfuVLnnHItMNR9K/fzeHJf1QMNlBP8tfX/r/TahUvwE1L8AJkh1Q
+        3wAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="gridViewCommandColumn2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAABhdJREFUSEuNVntMU3cYZTpl+ER8xcfUKT6SxT3MTNQZERPf08lwi8oynTrni6kx
-        2TDqfCtxU5b4ygDfcKniCyi0UkBLQQuF0hZKS1tKWyogL7GCMtGdnVv5Y0w0+5Ivub23v3O+73zfua1P
-        Z7Fjx44Jynu5UKnVrenp6R45M0Uu9wjSFI8gCJ545pmY6Lbz58+3SaXSGe3H/l9ERkZOj46OjrdWuuBo
-        qIPZ5YLBZkV+cTGUmjzIlXdxU5aGk+dikX4nC/mFhdgQHj6n/fhb452IiIj+CoVCnZKZgbwiLUxOB4oJ
-        rjWboDboodLkI12VDSmfn42PQ1pGBsTQ8tmuXbuWtuO8ORIkkqqk23LEXUuEuqiI1Tuhs5hRYCxhBwbk
-        FhYgMzcHGSS5cusmZFmZXoKnbc+Rz4JIsqIdqvP4MzY2VZJ0C/GJid4OzOzAWG6DyV7OtKPYaoGWZCJ5
-        klwGRbbSS9DGbMXf0Oh02LN//+p2uNfj96ioDVKFAhcEwautxVEBg8kELfXXGY3MEmgMOmj0emTl5ODu
-        vXtoedGGR09b0PTsKR42NiJLpcKeffu2tkN2DLY48WaqFJevXkFeXh4srNhAabSsWKfXQWcwQMfPuhKR
-        sIRbdh+pinSIZ64lJyGB0p4X4hGdkPA4PDzctx22Y1yUSMoTbtxA/v37MJeUoJQDNLEDE0FNBDWbzTBb
-        ymBkZ0XiXPLUyMxRITVDgevSFCTcvAEhSfC8keBkbKzkKr9UQAnKtFroKIMmOxsF9IWWW6QTU1sIA7sp
-        olQafic3Pw9ZubkkyvGusZCW+maCvZGRKyW3byOPFZl4oFipRDF1LdRoUEyZbJTNzGFaTKWwWq0os9lQ
-        UmZuH74WOdw0GY3ZKUH17DnybZOnqCXZymY9qzbKZChi5rC65uQUFHy3CjfOxsJZXY1SLoGJgzdbLCil
-        ZAZ6RUfSIpKJ7n+NoGT+gtuub9fgwphxL5cEBb00s2KbTI5cbpXl+HE8X7YCrvDtiJ40GdK4y7BzdY3s
-        yMxZlNGMJq6zuaICVncl0tX3OxIog4J3WRaEoHrjdni2RODYoCHYEjwTejq1jOBVM2ehfOsvqLuciJp1
-        PyFp7gLqr4Ob3nAR1F31AFX1dXDUVMPd2AB1YWFHgku9A7aVL1kGR8hyuFZvhGfTdqz3D8DKSZ+iYuEi
-        WNZugv3AUbi3ReAxizg1ZwGuX5HAIW5UqdG7zjaa8kFdHR791YpCEsybN6+jREf8+2+yzvsS1oWhsC9b
-        BeuK73Fi5BgYQpfDunk77Kt+RFVoGI7NCMbRo5GwcgbO0lI4KI+LL0Y3q69+1IgWurpTAjF2d/NdVzY1
-        GMZZ82GkZC4C6hZ/jeJFoXCTOGraDBz8dTfKaUIX17OcPnByiyqpu7umxkvQKhJYLJ0TiLFj5Kg45aQp
-        0Hz2OdRTg5A/jbOYFoyfx07Aob17UcHtKs+6AzP9YaMPKrhFTqcTLs7hYVMTnr+NwLF588KdEz/C9UHD
-        cXdEIBQjxyKTmc1c37sPIsPC0EiD1dAHbmYNN6eWwA0N9Xj0xIOG5ma8EAms1tcJTGFhS/VfLEb68NFI
-        HTgcyQOHQdEzAMn9BiOZhKoho3Csd1+cWr0aFazcwfeTna8QJ0kqK19JVN/8hPAksP2HIDMk5GPV7LmQ
-        DRmBWwRMI7i8hz+iRo/DtV4BkPkPgnTwcGTx/kGfLji3cydqOdRKyvOA8lSJ+rOLhhZxxCKBrSOBftr0
-        33IJLu07ECoClZHk2MRPEHXmNK6v+QFyHx+o+g5AxuD3ca+LHy4FjoOeBntcX4/62lo0Pm7iK/spGluf
-        dU4Q0s13bQ2leUiAelZ7YFRgThrtjvoGPGfbukNH4B4wFC7/gajp2Q+pod+guqXZC9ZZcOiewMDAjjOY
-        3aPXGnwwHvu6+13w8fMbFnP6dKUkJqZSiI2xHxcE+4GgOc6mru/hjwkTHm44fNh28dKlCiE+3h4nxNv5
-        L8ObQqJgv6VQ1J44dcpEyCGvkPljz+wmXnzo5/eVn4/PUF72YPYR7zG6MsXrgPHdu4f6+voG8ronsztT
-        DPH8v1MM8QwxfN79B9+1Dr5hRXbnAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAYXSURBVEhLjVZ5TJN3GGY6ZXgiXvGYOsUjWdxhZqLOiJh4
+        HxvDLSrLdOqcF1NjsmHUeStxU5Z4ZYA3fFTxAgqtFNBS0EKhtIXS0pbSlgrIJVZQJrpnz1f5Y0w0e5M3
+        +fp9/T3P+z7v+3ytT2exY8eOCcp7uVCp1a3p6ekeOTNFLvcI0hSPIAieeOaZmOi28+fPt0ml0hntx/5f
+        REZGTo+Ojo63VrrgaKiD2eWCwWZFfnExlJo8yJV3cVOWhpPnYpF+Jwv5hYXYEB4+p/34W+OdiIiI/gqF
+        Qp2SmYG8Ii1MTgeKCa41m6A26KHS5CNdlQ0pn5+Nj0NaRgbE0PLZrl27lrbjvDkSJJKqpNtyxF1LhLqo
+        iNU7obOYUWAsYQcG5BYWIDM3BxkkuXLrJmRZmV6Cp23Pkc+CSLKiHarz+DM2NlWSdAvxiYneDszswFhu
+        g8lezrSj2GqBlmQieZJcBkW20kvQxmzF39DodNizf//qdrjX4/eoqA1ShQIXBMGrrcVRAYPJBC311xmN
+        zBJoDDpo9Hpk5eTg7r17aHnRhkdPW9D07CkeNjYiS6XCnn37trZDdgy2OPFmqhSXr15BXl4eLKzYQGm0
+        rFin10FnMEDHz7oSkbCEW3YfqYp0iGeuJSchgdKeF+IRnZDwODw83LcdtmNclEjKE27cQP79+zCXlKCU
+        AzSxAxNBTQQ1m80wW8pgZGdF4lzy1MjMUSE1Q4Hr0hQk3LwBIUnwvJHgZGys5Cq/VEAJyrRa6CiDJjsb
+        BfSFllukE1NbCAO7KaJUGn4nNz8PWbm5JMrxrrGQlvpmgr2RkSslt28jjxWZeKBYqUQxdS3UaFBMmWyU
+        zcxhWkylsFqtKLPZUFJmbh++FjncNBmN2SlB9ew58m2Tp6gl2cpmPas2ymQoYuawuubkFBR8two3zsbC
+        WV2NUi6BiYM3WywopWQGekVH0iKSie5/jaBk/oLbrm/X4MKYcS8XBQW9NLNim0yOXG6V5fhxPF+2Aq7w
+        7YieNBnSuMuwc3WN7MjMWZTRjCaus7miAlZ3JdLV9zsSKIOCd1kWhKB643Z4tkTg2KAh2BI8E3o6tYzg
+        VTNnoXzrL6i7nIiadT8hae4C6q+Dm95wEdRd9QBV9XVw1FTD3dgAdWFhR4JLvQO2lX+5DI6Q5XCt3gjP
+        pu1Y7x+AlZM+RcXCxbCs3QT7gaNwb4vAYxZxas4CXL8igUPcqFKjd51tNOWDujo8+qsVhSSYN29eR4mO
+        +PffZJ33BawLQ2FftgrWFd/jxMgxMIQuh3XzdthX/Yiq0DAcmxGMo0cjYeUMnKWlcFAeF1+MblZf/agR
+        LXR1pwRi7O7mu65sajCMs+bDSMlcBNQt+RrFi0PhJnHUtBk4+OtulNOELq5nOX3g5BZVUnd3TY2XoFUk
+        sFg6JxBjx8hRccpJU6D57HOopwYhfxpnMS0YP4+dgEN796KC21WedQdm+sNGH1Rwi5xOJ1ycw8OmJjx/
+        G4Fj8+aFOyd+hOuDhuPuiEAoRo5FJjObub53H0SGhaGRBquhD9zMGm5OLYEbGurx6IkHDc3NeCESWK2v
+        E5jCwpbqFy1B+vDRSB04HMkDh0HRMwDJ/QYjmYSqIaNwrHdfnFq9GhWs3MH3k52vECdJKitfSVTf/ITw
+        JLD9hyAzJORj1ey5kA0ZgVsETCO4vIc/okaPw7VeAZD5D4J08HBk8f5Bny44t3MnajnUSsrzgPJUifqz
+        i4YWccQiga0jgX7a9N9yCS7tOxAqApWR5NjETxB15jSur/kBch8fqPoOQMbg93Gvix8uBY6DngZ7XF+P
+        +tpaND5u4iv7KRpbn3VOENLNd20NpXlIgHpWe2BUYE4a7Y76Bjxn27pDR+AeMBQu/4Go6dkPqaHfoLql
+        2QvWWXDonsDAwI4zmN2j1xp8MB77uvtd8PHzGxZz+nSlJCamUoiNsR8XBPuBoDnOpq7v4Y8JEx5uOHzY
+        dvHSpQohPt4eJ8Tb+S/Dm0KiYL+lUNSeOHXKRMghr5D5Y8/sJl586Of3lZ+Pz1Be9mD2Ee8xujLF64Dx
+        3buH+vr6BvK6J7M7Uwzx/L9TDPEMMXze/QfMVQ662NpStwAAAABJRU5ErkJggg==
 </value>
   </data>
   <metadata name="telerikMetroTheme1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
