--- a/UcasProjectManagement/UcasProWindowsForm/Forms/Attachments/FrmAttachemntsShow.resx
+++ b/UcasProjectManagement/UcasProWindowsForm/Forms/Attachments/FrmAttachemntsShow.resx
@@ -127,61 +127,62 @@
     <value>284, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="gridViewCommandColumn3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="gridViewCommandColumn1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAABIxJREFUSEvNlX1QVFUYxi9qEmIFDAml4E5kMJKJWTCojDA1mdPUMM40NY0plWMj
-        qy2BwJpOu4FMBMgNlg8XCZaPbZeQFgdSQIFlWV3YZbn7yTcspCHfiyhg2fR0FncqG3Ny/6nfzPPXfc/z
-        vOec995L/e9YTz/hFpDnGbOt3EcWJvVpDhP7NG8T+9Kh4rX8EMl6lr3MMVbzVkburtpqjVZHgN2xHQdU
-        L+GtGn+EFK9FgMATmwu9ouylDpBIhSeoYlA5I4RoLBW5PyZib10EPL5wZrzSXcPtVY4TJg21NCxUo+Xn
-        BrT+0oi8vlNY9dlKK8Wh3OwlDwlNFtIUf0kZFM3V70fBKB+l4+momM5D+DdbsTzJibZXO0A+xd+nCka0
-        dhfebd2JeMPrONG1B8m97yNt8GN4JbmCSifxtkYcIp9iBVR4Yk9LAN5pDcTeK5vwQdsWHNQE43DnDrwi
-        8cP2ikCEnQvGi5VbLL4iXxkJe7gpchYs54fWrkNEHQuvXfTDG40bECn3x9uKjXjv8ibsV23GAfVWfNQe
-        CpaUBSqHCrIv/ZeQ7bvnOVuf/34Ngqq98XLN09j2gw92XliPVxuewe5Lzy7J7cyjNnMHRzSJivIsWoV1
-        ksfBqnDDhkoPbKx6Ei9UeyFI5o1VAjJJ9MN2/jeWpTgxLkWP4DGRM9xLXbCm3BVPla2Gc+oKK3XSQXOG
-        YdwYxhSl15ubpcqzoDIpOAkpLCtwwgrhMnikuqNB1wSTsQ8tLSpGJPq2mKYFMTk5BQ8OZBhzpFZrLDbo
-        ezAxMY35+UXcurWAHcIwUCSATBdcPndBsvBLnMrMxun8QhQIi1BWJkVpaQVKSipQ36CWESunu44E0mmQ
-        zbS7q886em0Sc7OLUF7W4ebNeSwu3sbCwm2YrnaBSqHwXIY/isQlKC8nhmUSiERipKVlIjs7HxfqmtCh
-        NSJXWAVi60fkTel0OmZo0IIbs8Rs/tc/ND5mxcT4NKzWOYxen4Bl+Br6+keg0/eiSa6FWFoP6Xf1OH+h
-        EVdUGgyPXMelZi2+ypTgIDvFFrCfKITS6/UYGhrB+ToF5Ao1NB1GDA5exfT0HBYX7mDh1h1YZ+YxMTaL
-        4eExmM0WaDv7YDINEQ0S41FotD3IEcoQfzwfnxz9Gvs+jP2NmO8iopYCFK1qyFvaoNbo0MkYoGrrQEtr
-        Oy42KtGm1i11PT4+g8nJGxgY+AlGYjw4dA3dPSMoEdfjOL8QnPhsxCZkIJrNtURHH/3zom0B3T0D9wTo
-        9CboDWYYjHfF6IykawO59AmyMys5rlGcq1UiKbUEMfECHD2WjbiEkzh0KJbmcDj3fps0Gk1xf/8AORr9
-        ksn9AmxSqTvxpj4S1VPnUCZpQCw3F3FcAU7waByJOWZhs+P++Z+gVCqD5HI5rVAoLO3t7WAYHXr7+mHu
-        6r4nwL8xEGeuF0KQfxa8pDwkHkvG4cP36fpByGQylkQiiRKJRMWVlZWWmppa8iIpYDSaMDU1taTTwmIc
-        +TSR4XD+ctaOQtM0KyUlJZLH4/G5XG5zVlZWM5vN5tsf/9dQ1O8SjB0ya0CLDgAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAASNSURBVEhLzZV7TFtlGMYPbK7ipsKCA92AxjkhwznmFMI2
+        MojGaYyGLDEaMwfqMjNKLHIZJVukspFNYByhXFaGUC61rd0sCzguG1BKt0JLOS0tl3ErOOTOuguU6YyP
+        H12jYubi+o/+kuev837P837f955zqP8dfvST7gEFnnE7Kn0UYVKf5jCxT/MOsS8dKl7PD5H4sR1lzrEm
+        dVXkHtl2a4w2ApyOnTigeRnvVPsjpHQ9AgSe2FrsFe0odYJkKvywJg7y60KIJk8i/8dk7KuLwNovWYxX
+        5upwR5Xz7JSGWhpsVWj5uQGtvzSioP8UWMmrrBSXcneUPCQ0WUhTfLuyKJpnjELROB/lU5mQzRUg/Jvt
+        WJHmQjuqnaCQ4u/XBCNGvwfvt+5GUtcbONqzF8eufoiMoU/hlbYaVCaJX2rEKQopdoDME3tbAvBeayD2
+        XdmCj9q24aAuGLGdu/CqZCN2ygIRdj4YL8m3WXxFvgoS9nBTxBKs4IfWbEBEHRuvX9yItxo3IVLpj3dV
+        m/HB5S2I0mzFAe12fNIeCraUDSqPCnIs/ZeQ7XsUsKwvfL8OQVXeeKX6Gez4wQe7a/3wWsOzePPSc3a5
+        n3l0ydzJEU2joj1LHsMGyRNgy9yxSb4Wm889hRervBCk8AZLQCaJftjO/4ZrugvjVvIIHhex4FHuhnWV
+        q/F0xRqwTqy0UsedNGcYxp1hzNFGY3ezVH0WVDYFFyEF1yIXrBS6Yu1JDzQYmmA29aOlRcOIRN+W0rQg
+        Li+v6MGBDNMdqdebSruMfZiensPCwiLm523YJQwDRQLIdMHtCzccE57AqexcnC4sRpGwBBUVUpSXy1BW
+        JkN9g1ZBrFzuORJIp0FLpr09vdbxsRncurEI9WUDbt9ewOLiHdhsd2C+1gMqncLzWf4oEZehspIYVkgg
+        EomRkZGN3NxC1NY1oUNvQr7wHIjtRiJvymAwMMNDFty8QcwWfv1DU5NWTE/NwWq9hfGJaVhGxtA/MAqD
+        8SqalHqIpfWQflePC7WNuKLRYWR0Apea9fgqW4KDnPSlgCiiEMpoNGJ4eBQX6lRQqrTQdZgwNHQNc3O3
+        sGi7C9v8XVivL2B68gZGRibR3W2BvrMfZvMw0RAxHodO34c8oQJJRwrxWeLX2P9x/G/EfA8RZQ9QtWqh
+        bGmDVmdAJ9MFTVsHWlrbcbFRjTatwd711NR1zMzcxODgTzAR46HhMfT2jaJMXI8j/GJwk3IRfzgLMRye
+        JSYm8c+LXgro7RtcFmAwmmHs6kaX6Z4Yg4l03UUufZrszEqOaxzna9RIO1mGuCQBElNykXD4OA4diqe5
+        XO7yb5NOpysdGBgkR2O0m9wvYEkabSfeNkaiavY8KiQNiOflI4EnwNFUGpy4FAuHk/DP/wS1Wh2kVCpp
+        lUplaW9vB8MYcLV/AN09vcsC/BsDcWaiGILCs0hNK0ByyjHExt6n6wehUCjYEokkWiQSlcrlckt1dQ15
+        kVQwmcyYnZ2167SwFLGfJzNc7l/O2llommanp6dHpqam8nk8XnNOTk4zh8PhOx7/11DU74OVHRoQZ7BM
+        AAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="gridViewCommandColumn4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="gridViewCommandColumn2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAABihJREFUSEuNVXtMU3cYZQ9l+EScGh+bTtFtMe5hZqLOODHRoU4dwy1Ols2pc3PK
-        1JhsGHU+F4mbY4k6M0Dng5YigoKFVgpIKWihUG5ftLSltKVS5CVWcEx0Z+cy/hgTzb7kS27v7e+c7zvf
-        +e4N6i927tz5ivp6KTRabVfetcKAUqUKXFEqAxnyKwHZxfSAJFUaOJmU2H0hM6NbLpfP7z32/yI+Pn5e
-        YmKixFHvhbu1GTavF0anA+UmE9S6MijVRbikyMXx08kgOcorK7EpNnZx7/EnxlNxcXEjVfn52isF+Sir
-        0sPqccNEcL3NCq3RAI2uHHmaYsj5/JQkBbn5+RBDz2e7d+9e1Yvz+EhNS2vIuqpEysV0aKuqWL0Hgt2G
-        CouZHRhRWlmBgtIS5JMk7fIlKAoLegjudd9HOQsiyZpeqP7jt+TkHFnWZUjS03s6sLEDS60TVlct0wWT
-        ww49yUTyLKUCqmJ1D0E3swt/QScI2HvgwLpeuEfjp4SETXKVCmek0h5t7e46GK1W6Km/YLEwzdAZBegM
-        BhSWlKDo+nV0PujG7XudaP/jHm61taFQo8He/fu39UL2DbY441KOHOcvpKGsrAx2VmykNHpWLBgECEYj
-        BP4WzCKhmS67gRxVHsQzF7OzkEppf5dKcDY19U5sbGxwL2zfOC+T1aZmZqL8xg3YzGZUc4BWdmAlqJWg
-        NpsNNnsNLOysSpxLmRYFJRrk5KtAGyP1UiYuZGUGHktwPDlZdoF/qqAENXo9BMqgKy5GBfdCTxcJYuor
-        YWQ3VZRKx/+UlpehsLSURCU9Ns7MzXk8wb74+M9kV6+ijBVZecCkVsNEXSt1Opgok5Oy2ThMu7UaDocD
-        NU4nzDW23uHrUUKnKfLy+ifwL1qs3D5rtlZWrO4wsGqLQoEqZgmr68i+gopP1yLzVDI8fj+qaQIrB2+z
-        21FNyYzcFYGkVSTLK7r2KIF5ydKr3k/W48yUaQ/jVq54aGPFToUSpXSV/eefcX/1GnhjdyBx5izIU87D
-        Reta2JGNs6jhMlppZ1tdHRy+ehRpb/QlUL8Tsdu+NAr+r3cgsDUOR0ePxdaIBTBwU2sI3rBgIWq3fYfm
-        8+lo3PgNst5dSv0F+LgbXoL6Gm6ioaUZ7kY/fG2t0FZW9iU4NzRse+37q+GO+hjedV8jsHkHvgoNw2cz
-        30TdsuWwb9gM18Ej8G2Pwx0WcWLxUmSkyeAWHVVt6bGzk0t5s7kZt//sQqVBCERGRvaV6HDoyM2OyJVw
-        LIuGa/VaONZ8jmMTp8AY/TEcW3bAtfZLNETH4Oj8CBw5Eg8HZ+Cproab8nj5YvSxev/tNnRyq7mUjxKI
-        sWdA8MaaORGwLFwCCyXzElBY8SFMy6PhI3HC3Pk49P0e1HIJvbRnLffAQxfVU3dfY2MPQRcJjHZ7/wRi
-        7Jw4KUU9czZ0b70N7Zx3UD6Xs5gbgW+nvoIf9u1DHd1VW3gNNu6Hk3tQRxd5PB54OYdb7e24/yQC95Yt
-        y3bNeA0Zoyeg6MVwqCZORQGzmPnV0GGIj4lBGxeskXvgYzbSOU0Ebm1twe27AbR2dOABCUwOx6ME1piY
-        VYb3ViBvwmTkjJqA7FHjoRochuwRY5BNQs3YSTg6dDhOrFuHOlbu5vvJxVeIhyT19f9I1NJxl/CA2fkf
-        goKoqNc1i96FYuyLuEzAXIIrB4UiYfI0XBwSBkXoaMjHTEAh7x8Kehqnd+1CE4daT3luUp4GUX920dop
-        jpgdOJ19CQxz5/1YSnD58FHQEKiGJEdnvIGEk78iY/0XUAYFQTP8eeSPeQHXnw7BufBpMHDB7rS0oKWp
-        CW132vnKvoe2rj/6J4gaELyhkdLcIkALqz04Kbwklx96tLTiPtsWfjgM3/Pj4A0dhcbBI5AT/RH8nR09
-        YP2F3+8PhIeH953BokFD1uOll7F/YMiZoJCQ8UknT9anJSXVS5OTXAkymevQwsWe9meewy+vTr+1Kf6w
-        8+y5c3VSicSVIpW4JFKpSyJLdUnTZa5slarp2IkTVkKO/QeZH3vmAPFiekjIByFBQeN4OYg5TLzHeIYp
-        Xoe9PHBgdHBwcDivBzMHMsUQz/87xRDPECPo2b8Bn1AP6gf2d9QAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAYjSURBVEhLjVZ7TJN3FGUPZfhENjU+pm6iM1ncw8xEnVEx
+        8YV7MdziZNmc7uWDqXHZMOp8K3FTliguA9ycQimgIFBobYFZClooLV8LpaUtpS0VkJdYQZnozs5X+WNM
+        NLvJTb4+fufce+65vzZgoNixY8cM9ZVSaLTaHqVK6VMolb5chcKXJsv1SaSpvhSJxPdLYkKvJD2tVyaT
+        Leg79v8iNjZ2fkJCQoq9wQNXeyusHg9MDjvKq6qg1pVBob6MLHk+Tv6WBOWfRSjX67EhOnpp3/HHxhMx
+        MTHPqlQqbW5hAcoqDbC4XagiuMFqgdZkhEZXDqWmGDJ+fjolGfkFBRDDwM927dq1qg/n0ZEqlTZmX1Ig
+        +XwGtJWVrN4NwWZFhbmaHZhQqq9AYWkJCkiSdjEL8qJCP8Ht3rsoZ0EkWdMHNXD8mpSUJ82+iJSMDH8H
+        VnZgrnPA4qxjOlFlt8FAMpE8WyGHqljtJ+hl9uBv6AQBe/bvX9cH93D8FBe3QaZS4YxE4tfW5qqHyWKB
+        gfoLZjOzGjqTAJ3RiKKSEly+cgXd93px43Y3Ou/cxvWODhRpNNizb9/WPsj+wRZnZuXJcC49DWVlZbCx
+        YhOlMbBiwShAMJkg8LVQLRJW02VXkadSQjxzPicbqZT2d0kKTqem3oyOjg7sg+0ff0ildamZmSi/ehXW
+        6mrUcIAWdmAhqIWgVqsVVlstzOysUpxLmRaFJRrkFahwQZaL1KxMSLLTfY8kOJmUJE3nlyooQa3BAIEy
+        6IqLUcG9MNBFgpgGPUzsppJS6fid0vIyFJWWkqjEb+P0/LxHE+yNjf1UeukSyliRhQeq1GpUUVe9Tocq
+        yuSgbFYO02apgd1uR63Dgepaa9/wDSih0+RczAEJmpYsVWybPUcrLVZ3GVm1WS5HJbOE1XXl5KLik7XI
+        PJ0Ed1MTamgCCwdvtdlQQ8lM3BWBpJUkUxaoHiaoXhF+yfPxepyZOv3+tyvD71tZsUOuQCldZTt+HHdX
+        r4EnejsSZs2GLPkcnLSumR1ZOYtaLqOFdrbW18PubUCB9mp/AvXCsF228Ag0bdwO35YYHBszDlvCFsHI
+        Ta0leOOixajb+j1az2Wg+ctvkL0snPoL8HI3PAT1Nl5DY1srXM1N8Ha0Q6vX9yc4OzxkW917q+GK+Aie
+        dRvh27QdXweH4NNZr6N+5duwfb4JzgNH4d0Wg5ssIn5pOC6kSeESHVVj9tvZwaW81tqKG3/1QE+C5cuX
+        95foSPCzm+zL34V9ZSScq9fCvuYznJg8FabIj2DfvB3OtV+hMTIKxxaE4ejRWNg5A3dNDVyUx8OL0cvq
+        m250oJtbrTcaHyYQY/egwC9r54bBvHgFzJTMQ0DhnQ9Q9XYkvCSOm7cAB3/YjTouoYf2rOMeuOmiBuru
+        bW72E/SQwGCzDUwgxo7JU5LVs+ZA98ab0M5diPJ5nMW8MHw3bQYO7d2LerqrruhPWLkfDu5BPV3kdrvh
+        4Ryud3bi7uMIXJs3r9w58xVcGDMRlyeFQjV5GgqZxcyvh49AbFQUOrhgzdwDL7OZzmkhcHt7G27c8qG9
+        qwv3SFBptz9MYImKWmV86x0oJ76IvNETkTN6AlRDQ5AzaixySKgZNwXHho9E/Lp1qGflLt5PTl4hbpI0
+        NDyQqK3rFuEBwfEfgsKIiFc1S5ZBPm4SLhIwn+CKIcGIe3E6zg8LgTx4DGRjJ6KI7x8MeBK/7dyJFg61
+        gfJcozyNov7sor1bHDE7cDj6Exjnzf+xlOCykaOhIVAtSY7NfA1xv5zChfVfQBEQAM3I51Aw9nlceTII
+        Z0Onw8gFu9nWhraWFnTc7OSVfRsdPXcGJogYFPh5M6W5ToA2VntgSmhJPu8TtLXjLtsWDh2B97nx8ASP
+        RvPQUciL/BBN3V1+sIGCkvlCQ0P7z2DJkGHr8cJL2Dc46ExAUNCExFOnGqSJiQ2SpETncYnEeWDhUnfn
+        U8/g5xkzrm84fNjxx9mz9ZKUFGeyJMXJfxn+lGRInBdVqpYT8fEWQo57gMwfe+Yg8eHloKD3gwICxvNx
+        CHOE+B7jKab4HPLS4MGRgYGBoXweyhzMFEM8/+8UQzxDjICn/wHEzQ9F6nZFSAAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
